[project]
name = "reader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.28.2",
    "browserforge>=1.2.4",
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "httpx[http2,https2]>=0.28.1",
    "python-socketio[client]>=5.16.3",
    "pytz>=2026.2",
    "pyyaml>=6.0.3",
    "socksio>=1.0.0",
    "tzdata>=2026.2",
]
